Fix CSS syntax that requires wrapping sub-declarations [WEB-2950]

--- a/frontend/scss/molecules/_m-listing.scss
+++ b/frontend/scss/molecules/_m-listing.scss
@@ -2370,9 +2370,12 @@ a:focus:hover .btn--magazine {
 
   .title {
     @include untuck;
-    padding-top: 10px;
-    line-height: 1.25em;
-    font-size: 19px;
+
+    & {
+      padding-top: 10px;
+      line-height: 1.25em;
+      font-size: 19px;
+    }
   }
 }
 
